--- a/package.json
+++ b/package.json
@@ -1,38 +1,63 @@
 {
   "name": "santa-app",
+  "private": true,
   "version": "0.0.1",
-  "description": "A simple Node app built on Express, instantly up and running.",
-  "main": "server.js",
+  "description": "A simple app to collect wishes and send them to santa.",
+  "main": "dist/server/server.js",
+  "type": "module",
   "scripts": {
-    "start:vite": "vite --port 3000",
-    "start": "node -r dotenv/config server.js"
+    "test": "vitest", 
+    "dev": "run-p dev:client dev:server",
+    "dev:client": "vite",
+    "dev:server": "tsx watch --clear-screen=false ./src/server/server.ts",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "tsc -p tsconfig.client.json && vite build",
+    "build:server": "tsc -p tsconfig.server.json",
+    "start": "node dist/server/server.js",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@vitejs/plugin-react": "^3.1.0",
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "morgan": "^1.10.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "request": "^2.88.2"
+    "axios": "^1.7.5",
+    "dayjs": "^1.11.13",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-validator": "^7.2.0",
+    "light-my-request": "^5.13.0",
+    "nodemailer": "^6.9.14"
   },
   "devDependencies": {
-    "@types/react": "^18.0.34",
-    "@types/react-dom": "^18.0.11",
-    "typescript": "^5.0.4",
-    "vite": "^4.2.1"
-  },
-  "engines": {
-    "node": "16.x"
+    "@eslint/js": "^9.9.1",
+    "@mantine/core": "^7.12.1",
+    "@mantine/form": "^7.12.1",
+    "@mantine/hooks": "^7.12.1",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/express": "^4.17.21",
+    "@types/nodemailer": "^6.4.15",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "eslint": "^9.9.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.11",
+    "globals": "^15.9.0",
+    "jsdom": "^25.0.0",
+    "npm-run-all2": "^6.2.2",
+    "postcss": "^8.4.41",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
+    "prettier": "3.3.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tsx": "^4.19.0",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.3.0",
+    "vite": "^5.4.2",
+    "vitest": "^2.0.5"
   },
   "repository": {
-    "url": "https://github.com/alj-devops/santa-app"
-  },
-  "license": "MIT",
-  "keywords": [
-    "node",
-    "glitch",
-    "express"
-  ]
+    "url": "https://github.com/mattkrins/santa-app"
+  }
 }
