--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
   },
   "repository": {
     "url": "https://github.com/mattkrins/santa-app"
+  },
+  "engines" : { 
+    "node" : ">=20.10.0"
   }
 }
