--- a/package.json
+++ b/package.json
@@ -57,10 +57,17 @@
     "vite": "^5.4.2",
     "vitest": "^2.0.5"
   },
+  "engines" : { 
+    "node" : ">=20.10.0"
+  },
   "repository": {
     "url": "https://github.com/mattkrins/santa-app"
   },
-  "engines" : { 
-    "node" : ">=20.10.0"
-  }
+  "license": "MIT",
+  "keywords": [
+    "node",
+    "santa",
+    "express",
+    "react"
+  ]
 }
